@@ -2,7 +2,9 @@ Process Hacker
 
 2.35
  * NEW/IMPROVED:
-   * Added CF Guard (Control Flow Guard) column
+   * Added CF Guard (Control Flow Guard) column for processes and modules
+   * Added highlighting for AppContainer DLLs
+   * Added AppContainer and CF Guard image characteristics to peview
    * Support for up to 64 processors when setting process/thread affinity
    * Updated ExtendedTools plugin:
      * Added Disk and Network graphs for all processes
